# rox

./: Cargo.toml  demo.rox  function_demo.rox  grammar.md
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: all.rs  derive_expr.rs  derive_impl.rs  traits_and_stubs.rs
rox/: Cargo.toml
rox/src/: environment.rs  error.rs  expr.rs  exprs.rs  interepreter.rs  lib.rs  main.rs  parser.rs  scanner.rs  stmts.rs
rox/src/interpreter/: environment.rs  error.rs  interpreter.rs  mod.rs  native_functions.rs  resolver.rs
rox/src/parser/: error.rs  exprs.rs  mod.rs  parser.rs  stmts.rs
rox/src/scanner/: error.rs  mod.rs  scanner.rs
src/: error.rs  lib.rs  main.rs  scanner.rs
tools/: Cargo.toml  output.rs  struct_descrption.txt
tools/src/: main.rs
