[package]
name = "rox"
edition = "2021"
version.workspace = true
description.workspace = true
authors.workspace = true
default-run = "rox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
macros = { path = "../macros" }
peeking_take_while = "1.0.0"
